Centered image to ensure proper display and spacing within the article's text.

--- a/style.css
+++ b/style.css
@@ -152,3 +152,12 @@ footer {
     font-size: 1rem;
     padding: 0, 16px;
   }
+
+  main > article img {
+    width: 100%;
+    margin: 0, 24px;
+    display: block;
+    float: none;
+    max-width: 200px;
+
+  }
